# robotrade

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: github-actions.yml
docker-compose/: Makefile  elasticsearch.yml  news-signal-historical.yml  news-signal-live.yml  technical-indicators-historical.yml  technical-indicators-live.yml
services/candles/: live.settings.env  pyproject.toml  run.py
services/news/: Makefile  README.md  config.py  historical.settings.env  live.settings.env  pyproject.toml  run.py  settings.env
services/news-signal/: Makefile  config.py  fine_tuning.py  golden_dataset.py  historical.settings.env  live.settings.env  ollama.env  pyproject.toml  run.py
services/news-signal/data/: instruction_dataset_claude_300.jsonl
services/news-signal/llms/: base.py  claude.py  config.py  dummy.py  factory.py  ollama.py
services/news/sources/: __init__.py  factory.py  historical_data_source.py  news.py  news_data_source.py  news_downloader.py
services/prediction-api/: Cargo.toml  Makefile
services/price-predictor/: Dockerfile  Makefile  config.py  feature_reader.py  inference.py  inference.settings.env  names.py  price_predictor.py  pyproject.toml  run.py  sinks.py  training.py  training.settings.env
services/price-predictor/models/: dummy_model.py  xgboost_model.py
services/technical-indicators/: Makefile  candle.py  pyproject.toml  run.py
sessions/: session_1.md  session_10.md  session_11.md  session_12.md  session_2.md  session_3.md  session_4.md  session_5.md  session_6.md  session_7.md  session_8.md  session_9.md
(+17 files in other folders)
